# pl-fuzzy-frame-match

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md
.github/workflows/: ci.yaml  docs.yaml  documentation.yaml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
performance_test/: generate_test_data.py  performance_test.py
pl_fuzzy_frame_match/: __init__.py  _utils.py  matcher.py  models.py  output_column_name_utils.py  pre_process.py  process.py
tests/: match_utils.py  test_output_column_name_utils.py  test_pl_fuzzy_frame_match.py  test_pre_process.py  test_process.py  test_utils.py
